[project]
name = 'mnemos-bridge-claude-connector'
version = '0.1.0'
requires-python = '>=3.11'
license = {text = 'Apache-2.0'}
dependencies = [
  'mnemos-bridge-core>=0.1.0',
  'fastapi>=0.115',
  'uvicorn[standard]>=0.30',
  'starlette>=0.40',
  'authlib>=1.3',
  'httpx>=0.27',
  'pydantic>=2.8',
  'pyjwt>=2.8',
  'python-multipart>=0.0.9',
]

[project.optional-dependencies]
dev = ['pytest>=8', 'pytest-asyncio>=0.23', 'pytest-cov>=5', 'ruff>=0.5', 'httpx>=0.27']

[project.scripts]
mnemos-claude-connector = 'mnemos_bridge_claude_connector.server:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/mnemos_bridge_claude_connector']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']

[tool.ruff]
line-length = 100
target-version = 'py311'
